--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -30,20 +30,29 @@
         </div>
       </div>
       <div class="flex items-center">
-        <button
-          type="button"
-          class="flex rounded-full"
-          aria-expanded="false"
-          type="button"
-          cdkOverlayOrigin #trigger="cdkOverlayOrigin"
-          (click)="isOpen = !isOpen"
-        >
-          <img
-            class="w-8 h-8 rounded-full"
-            src="https://api.lorem.space/image/face?w=400&h=400"
-            alt="user photo"
-          />
-        </button>
+        <div class="flex space-x-2">
+          <button class="text-white" type="button">
+            <fa-icon [icon]="faBell"></fa-icon>
+          </button>
+          <button class="text-white" type="button">
+            <fa-icon [icon]="faInfoCircle"></fa-icon>
+          </button>
+          <button
+            type="button"
+            class="flex rounded-full"
+            aria-expanded="false"
+            type="button"
+            cdkOverlayOrigin #trigger="cdkOverlayOrigin"
+            (click)="isOpen = !isOpen"
+          >
+            <img
+              class="w-8 h-8 rounded-full"
+              src="https://api.lorem.space/image/face?w=400&h=400"
+              alt="user photo"
+            />
+          </button>
+        </div>
+       
       </div>
     </div>
   </nav>
