--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,10 +1,11 @@
 <button
   [type]="typeBtn"
-  class="text-white w-full font-medium rounded text-sm px-5 py-2 focus:ring-4"
+  class="w-full font-medium rounded text-sm px-5 py-2 focus:ring-4"
   [ngClass]="{
-      'bg-success-700 hover:bg-success-800 focus:ring-success-300': this.color === 'success',
-      'bg-primary-700 hover:bg-primary-800 focus:ring-primary-300': this.color === 'primary',
-      'bg-red-700 hover:bg-red-800 focus:ring-red-300': this.color === 'danger',
+      'text-white bg-success-700 hover:bg-success-800 focus:ring-success-300': this.color === 'success',
+      'text-white bg-primary-700 hover:bg-primary-800 focus:ring-primary-300': this.color === 'primary',
+      'text-white bg-red-700 hover:bg-red-800 focus:ring-red-300': this.color === 'danger',
+      'text-gray-700 bg-gray-300 hover:bg-gray-500 focus:ring-gray-50': this.color === 'gray-light',
   }"
 >
   <ng-content></ng-content>
