--- a/src/app/pages/board/board.component.html
+++ b/src/app/pages/board/board.component.html
@@ -12,7 +12,9 @@
                   </div>
           
                   <div class="text-sm mt-2 min-he-2" cdkDropList (cdkDropListDropped)="drop($event)" [cdkDropListData]="column.todos">
-                    <div *ngFor="let todo of column.todos"
+                    <div 
+                    (click) = "openDialog()"
+                    *ngFor="let todo of column.todos"
                         cdkDrag
                       class="bg-white shadow p-2 rounded mt-2 border-b border-x-gray-300 cursor-pointer hover:bg-gray-400"
                     >
